Sat Apr  2 18:09:30 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Splitted the SILC libraries configuration into a configure
	  fragment into lib/configure.ad.  It is now possible, once
	  this feature is added, to specify whether to compile or not
	  compile included SILC libraries.  Affected files are
	  configure.in.pre, lib/silcmath/mpi/configure.ad,
	  lib/configure.ad, Makefile.defines.pre and
	  Makefile.defines_int.pre.

	* Added --with-silc-includes and --with-silc-libs to configure.
	  If specified the included libs are not compiled, but the
	  specified libs are used.  Pkg-config is not yet supported.
	  Affected file configure.in.pre.

	* Fixed WATCH command handling on backup router.  Router does not
	  send the watch command any more to backup if it originates from
	  backup.  Affected file silcd/command.c.

Fri Apr  1 18:52:47 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Changed announcing to not announce unregistered clients.
	  Affected file silcd/server.c.

	* Fixed username handling in command reply.  Affected file
	  silcd/command_reply.c.

	* Log files are now 0600.  Affected file lib/silcutil/silclog.c.

Thu Mar 31 22:34:22 CEST 2005  Patrik Weiskircher <pat@icore.at>

	* Added new define SILC_MACOSX, if __APPLE__ and __MACH__ is defined.
          Affected file: includes/silcincludes.h.in

	* bool is defined as _Bool on Mac OS X now.
          Affected file: lib/silcutil/silctypes.h

Thu Mar 31 08:52:06 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Added support for UTF-8 nicknames, channel names and
	  server names in client library.  Affected files in
	  lib/silcclient/.

	* Added __SILC_HAVE_PTHREAD, __SILC_HAVE_SIM, __SILC_HAVE_LIBIDN,
	  and __SILC_ENABLE_DEBUG to include/silcclient.h for third-party
	  software to check how Toolkit has been compiled.

Wed Mar 30 22:16:35 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Added silc_utf8_str[n]casecmp into lib/silcutil/silcutf8.[ch].
