@@ -1,3 +1,8 @@
+Sun Apr  3 14:58:53 EEST 2005  Pekka Riikonen <priikone@silcnet.org>
+
+	* Added WATCH list announcing in backup router protocol.
+	  Affected files are silcd/command.c, server.c, server_backup.c.
+
 Sat Apr  2 18:09:30 EEST 2005  Pekka Riikonen <priikone@silcnet.org>
 
 	* Splitted the SILC libraries configuration into a configure
